--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 
     <title>@ViewBag.Title</title>
 </head>
-<body>
+<body style="background-color:whitesmoke">
     <div class="container">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-light navbar-light border-bottom">
             <a class="navbar-brand">
                 <img src="" height="30" width="30" />
             </a>
