--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width" />
 
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
-
+    <script src="~/lib/font-awesome/js/all.js"></script>
 
     <title>@ViewBag.Title</title>
 </head>
-<body style="background-color:whitesmoke">
-    <div class="container">
-        <nav class="navbar navbar-expand-sm bg-light navbar-light border-bottom">
+<body class="bg-white">
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-sm bg-white navbar-light border-bottom">
             <a class="navbar-brand">
                 <img src="" height="30" width="30" />
             </a>
@@ -26,7 +27,7 @@
                         <a class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Create</a>
+                        <a class="nav-link border border-success text-success"><i class="fas fa-pencil-alt"></i> Create </a> 
                     </li>
                 </ul>
             </div>
