--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -6,13 +6,20 @@
 
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
+    @*rich text editor*@
+    <script src="https://cdn.tiny.cloud/1/0xf12t14xiscwdam060u44u4lxxu9s6iveziefqsrlkkv7vc/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+        tinymce.init({
+            selector: '#mytextarea'
+        });
+    </script>
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     <script src="~/lib/font-awesome/js/all.js"></script>
-
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
-<body class="bg-white">
+<body class="bg-white" style="min-height:100vh;">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm bg-white navbar-light border-bottom">
             <a class="navbar-brand">
@@ -24,10 +31,10 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
-                        <a class="nav-link">Home</a>
+                        <a class="nav-link" asp-controller="home" asp-action="index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link border border-success text-success"><i class="fas fa-pencil-alt"></i> Create </a> 
+                        <a class="nav-link border border-success text-success" asp-controller="home" asp-action="create"><i class="fas fa-pencil-alt"></i> Create </a>
                     </li>
                 </ul>
             </div>
@@ -35,6 +42,11 @@
         <div>
             @RenderBody()
         </div>
+        @if (IsSectionDefined("Scripts"))
+        {
+            @RenderSection("Scripts");
+
+        }
 
     </div>
 </body>
