--- a/Blog/Views/Home/Index.cshtml
+++ b/Blog/Views/Home/Index.cshtml
@@ -24,7 +24,8 @@
                         </a>
                     </h2>
                     <h3 class="text-muted"><small>@blog.SubTitle</small></h3>
-                    <p class="mt-4">@blog.Introduction</p>
+                    <p class="mt-4">@Html.Raw(blog.Introduction)</p>
+                    <p class="text-center font-weight-bolder text-muted" style="font-size:30px">. . .</p>
                 </div>
 
                 <div class="col-12">
