--- a/Blog/Views/Home/Create.cshtml
+++ b/Blog/Views/Home/Create.cshtml
@@ -1,7 +1,10 @@
 ﻿@model BlogPost
 
+@{
+    ViewBag.Title = "Create Post";
+}
 
-<div class="row bg-primary">
+<div class="row" style="background-color:#89D1FE">
     <div class="col-md-8 offset-md-2 col-12 bg-white">
         <div class="d-flex align-items-start">
             <ul class="nav flex-column nav-pills border-right min-vh-100" id="myTab" role="tablist">
@@ -12,7 +15,7 @@
                     <a class="nav-link" id="details-tab" data-toggle="tab" href="#details" role="tab" aria-controls="details" aria-selected="false">Details</a>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <a class="nav-link line" id="preview-tab" data-toggle="tab" href="#preview" role="tab" aria-controls="preview" aria-selected="false">Preview</a>
+                    <a class="nav-link line disabled" id="preview-tab" data-toggle="tab" href="#preview" role="tab" aria-controls="preview" aria-selected="false">Preview</a>
                 </li>
             </ul>
             <div class="tab-content pt-5 pb-3 w-100 mh-100" id="myTabContent">
@@ -20,35 +23,38 @@
                 <div class="row pl-2">
                     <div class="col-12 col-sm-12 col-md-11 offset-md-1 col-xl-9 ">
                         <div class="tab-pane fade show active h-100" id="article" role="tabpanel" aria-labelledby="article-tab">
-                            <textarea  asp-for="Content" id="mytextarea" class=" form-control h-100" rows="20" form="create-post-form"></textarea>
+                            <textarea asp-for="Content" id="mytextarea" class=" form-control h-100" rows="20" form="create-post-form"></textarea>
                             <span asp-validation-for="Content" class="text-danger"></span>
                         </div>
                         <div class="tab-pane fade display-none" id="details" role="tabpanel" aria-labelledby="details-tab">
                             <form asp-controller="home" asp-action="create" method="post" id="create-post-form">
                                 <div class="form-group">
                                     <label asp-for="Author"></label>
-                                    <input asp-for="Author"   type="text" class="form-control"  placeholder="">
+                                    <input asp-for="Author" id="myAuthor" type="text" class="form-control" placeholder="">
                                     <span asp-validation-for="Author" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Title">Post Title</label>
-                                    <input asp-for="Title" type="text" class="form-control" placeholder="">
+                                    <input id="myTitle" asp-for="Title" type="text" class="form-control" placeholder="">
                                     <span asp-validation-for="Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="SubTitle">Post Subtitle</label>
-                                    <input asp-for="SubTitle" type="text" class="form-control" placeholder="">
+                                    <input id="mySubtitle" asp-for="SubTitle" type="text" class="form-control" placeholder="">
                                     <span asp-validation-for="SubTitle" class="text-danger"></span>
                                 </div>
 
                                 <div class="form-group">
-                                    <label asp-for="Introduction" >Post Introduction</label>
-                                    <textarea asp-for="Introduction" class="form-control" id="form-introduction"rows="3" placeholder="It is recommended to add an image"></textarea>
+                                    <label asp-for="Introduction">Post Introduction</label>
+                                    <textarea asp-for="Introduction" class="form-control" id="myIntroduction" rows="3" placeholder="It is recommended to add an image"></textarea>
                                     <span asp-validation-for="Introduction" class="text-danger"></span>
                                 </div>
+                                <div asp-validation-summary="All" class="text-danger"></div>
+                                <button class="btn btn-success float-right" type="submit" form="create-post-form">Submit article</button>
                             </form>
                         </div>
                         <div class="tab-pane fade display-none" id="preview" role="tabpanel" aria-labelledby="preview-tab">
+                            <p id="previewModelContent"></p>
                             <div asp-validation-summary="All" class="text-danger"></div>
                             <button class="btn btn-success" type="submit" form="create-post-form">Submit article</button>
                         </div>
