--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="https://cdn.tiny.cloud/1/0xf12t14xiscwdam060u44u4lxxu9s6iveziefqsrlkkv7vc/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
-            selector: '#mytextarea, textarea#form-introduction',
+            selector: '#mytextarea, textarea#myIntroduction',
             plugins: 'image paste code table link imagetools advcode media powerpaste codesample',
             //menubar: 'insert',
             //toolbar: 'image',
