Comments are now showing correctly

--- a/Blog/Views/Home/Create.cshtml
+++ b/Blog/Views/Home/Create.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Create Post";
 }
 
-<div class="row" style="background-color:#89D1FE">
+<div class="row bg-light" >
     <div class="col-md-8 offset-md-2 col-12 bg-white">
         <div class="d-flex align-items-start">
-            <ul class="nav flex-column nav-pills border-right min-vh-100" id="myTab" role="tablist">
+            <ul class="nav flex-column nav-pills border-right min-vh-100 p-md-5" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" id="article-tab" data-toggle="tab" href="#article" role="tab" aria-controls="article" aria-selected="true">Article</a>
                 </li>
