--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
 <body class="bg-white" style="min-height:100vh;">
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm bg-white navbar-light border-bottom">
-            <a class="navbar-brand">
-                <img src="" height="30" width="30" />
+            <a asp-controller="home" asp-action="index" class="navbar-brand">
+                <img src="~/images/test.png" height="200" width="200" />
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
