--- a/Blog/Views/Home/ShowPost.cshtml
+++ b/Blog/Views/Home/ShowPost.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row">
-    <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
+    <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-3 text-wrap text-break">
 
 
         <div id="@Model.Id" class="row bg-white p-3">
@@ -16,8 +16,8 @@
 
             <div class="col-12">
                 <h1 class="text-capitalize mb-0">@Model.Title</h1>
-                <h2 class="text-muted"><small>@Model.SubTitle</small></h2>
-                <p class="mt-4" style="font-size:18px">@Html.Raw(Model.Introduction) @Html.Raw(Model.Content)</p>
+                <h1 class="text-muted"><small>@Model.SubTitle</small></h1>
+                <div class="mt-4" style="font-size:24px !important;">@Html.Raw(Model.Introduction) @Html.Raw(Model.Content)</div>
             </div>
 
             <div class="col-12">
