--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -7,11 +7,14 @@
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
     @*rich text editor*@
+
     <script src="https://cdn.tiny.cloud/1/0xf12t14xiscwdam060u44u4lxxu9s6iveziefqsrlkkv7vc/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
             selector: '#mytextarea, textarea#myIntroduction',
             plugins: 'image paste code table link imagetools advcode media powerpaste codesample',
+            automatic_uploads: true,
+            resize: true,
             //menubar: 'insert',
             //toolbar: 'image',
             //image_list: [
@@ -31,7 +34,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm bg-white navbar-light border-bottom">
             <a asp-controller="home" asp-action="index" class="navbar-brand">
-                <img src="~/images/test.png" height="200" width="200" />
+                <img id="logo" src="~/images/test.png" height="200" width="200" />
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -50,12 +53,57 @@
         <div>
             @RenderBody()
         </div>
+        <div class="modal fade " id="viewImg" tabindex="-1" role="dialog" style="display: none;">
+            <div class="modal-dialog  modal-xl w-100">
+                <div class="modal-content w-100">
+                    <div class="modal-header pull0">
+                        <h4 class="modal-title pull-left">View Image</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+
+                    </div>
+                    <div class="modal-body">
+                        <div id="imgViewer" style="overflow-x: scroll;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         @if (IsSectionDefined("Scripts"))
         {
             @RenderSection("Scripts");
 
         }
+        <script>
+            const imgs = document.querySelectorAll('img');
+            imgs.forEach(img => {
+                if (!(img.id === 'logo')) {
+                    let wrap = document.createElement("div");
+                    wrap.classList.add("img-wrapper");
+                    let startingImgParentNode = img.parentNode;
+                    startingImgParentNode.appendChild(wrap);
+                    wrap.appendChild(img);
+                    img.classList.add("img-responsive");
 
+
+                    img.addEventListener('click', (e) => {
+                        document.getElementById('viewImg').classList.toggle('display-none');
+
+                    })
+                }
+            })
+          
+         
+            $('img').on('click', function (e) {
+                if (!(e.target.id === 'logo')) {
+                    $('#imgViewer').html('').append($(e.currentTarget).clone().removeClass('img-responsive').removeClass('img-thumbnail'))
+                    $('#viewImg').modal('show')
+                }
+                
+               
+            })
+        </script>
     </div>
 </body>
 </html>
