Comments formatted for better viewing

--- a/Blog/Views/Home/ShowPost.cshtml
+++ b/Blog/Views/Home/ShowPost.cshtml
@@ -20,7 +20,7 @@
                 <div class="mt-4" style="font-size:24px !important;">@Html.Raw(Model.Introduction) @Html.Raw(Model.Content)</div>
             </div>
 
-            <div class="col-12">
+            <div class="col-12 border-top pt-3">
                 <button class="btn btn-light"><i class="far fa-heart"></i> <span>@Model.Likes</span></button>
                 <button id="show-post-comment-button" class="btn btn-light"><i class="far fa-comment"></i> <span>@Model.Comments.Count</span></button>
             </div>
